tests/ui/error-codes/E0624.stderr
error[E0624]: method `method` is private
  --> $DIR/E0624.rs:11:9
   |
LL |         fn method(&self) {}
   |         ---------------- private method defined here
...
LL |     foo.method();
   |         ^^^^^^ private method

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0624`.
